# OTUS_8

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release_ubuntu.yml
msvc/: OTUS_8.sln  homework_8.vcxproj  homework_8.vcxproj.filters
src/: differ.cpp  differ.h  main.cpp  utils.cpp  utils.h
